jdk-only: retire 8 finished records, and the final completion roadmap
RETIREMENT (8 records, 102 -> 94). Each carries per-record measured evidence in
RETIREMENT-20260812B.md, not a green headline: W7-59, W7-13, W7-40, W7-48,
W7-82, W7-38, W7-67, W7-92.

Two nominations REFUSED, which is the load-bearing half:
  * W7-31 held — its verdict was "closed, needs a build not a patch", so all
    three falsifiers were run. Two pass. The third found a LIVE defect:
    HotSpot throws UnsupportedClassVersionError for a preview class file, we
    throw ClassFormatError carrying a Rust Debug string
    (Linkage(UnsupportedClassVersionError { class_name: "", ... })). A container
    catching the JDK type does not catch ours. Pre-existing on all binaries.
  * W7-91 held on its numeric half — String.format("%,.2f") with no Locale
    localises against ROOT, and unlike W7-67's residual it is not recorded at
    its source site, so retiring would have dropped it.
A blanket sweep of README §2.3 was also refused: the closing logs print no check
counts, so they discharge a PASS and never a count.

W7-92's own §6 prediction of streamBytes=179 is SUPERSEDED — both VMs read 177
at this hour, because the unpadded 12-hour field is one digit for the broken and
fixed VM alike. The timezone fix is verified directly instead:
defaultZoneRawOffsetMs 0 -> -10800000 and getID() UTC -> America/Buenos_Aires,
matching HotSpot in both modes.

THE ROADMAP — docs/feature-designs/jdk-only-completion-roadmap.md, written from
three censuses taken today rather than from record titles.

The headline finding is positive and was measured, not assumed: **embedded
Tomcat 12 boots, serves GET/POST/404 and shuts down cleanly under --jdk-only**,
and a 27-point sweep of the JDK surface real apps use passes 26/27.

What blocks applications is ONE mechanism with three reachable instances: a
native registered in the ESSENTIAL set survives strict mode, runs, asks for a
FABRICATED receiver, gets the refusal --jdk-only exis